--- a/codex-cli/package.json
+++ b/codex-cli/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "@lee101-3/codex-infinite",
+  "name": "@codex-infinity/codex-infinity",
   "version": "0.0.3",
   "license": "Apache-2.0",
   "description": "Codex Infinity - a smarter coding agent that can run forever",
   "bin": {
     "codex-infinity": "bin/codex-infinity.js"
+  },
+  "scripts": {
+    "prepack": "node scripts/verify_vendor.js"
   },
   "type": "module",
   "engines": {
